--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,10 @@ ul li a{
     color: #3A3A3A;
     font-weight: 600;
 }
+
+.banner-logos{
+    margin-top: 6rem;
+    display: flex;
+    gap:10px;
+    justify-content: space-around;
+}
