--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,38 @@ main h3{
     color: #6C6C6C;
     font-weight: 500;
 }
+
+footer{
+    background: #0A0826;
+    height: 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.footer-title{
+    color: #FFF;
+    font-weight: 700;
+    font-size: 1.9rem;
+    margin-bottom: 5px;
+}
+
+.footer-detail{
+    color:  #D9DBE1;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 28px;
+    margin-bottom: 15px;
+}
+
+.icon{
+    display: flex;
+    justify-content: center;
+    gap:25px;
+    font-size: 1.6rem;
+    color:  #D9DBE1;
+}
 /* responsive design */
 
 /* small device */
@@ -176,7 +208,7 @@ main h3{
     .nav-title{
         margin-bottom: 1rem;
     }
-    .banner{
+    .banner,.feature{
         flex-direction: column-reverse;
         text-align: center;
     }
@@ -202,6 +234,11 @@ main h3{
     }
     .card-img img{
         width:100%;
+    }
+
+    .feature{
+        flex-direction: column-reverse;
+        gap:3rem;
     }
 }
 
@@ -242,5 +279,11 @@ main h3{
     }
     .card-img img{
         width:100%;
+    }
+
+    .feature{
+        flex-direction: column-reverse;
+        gap:3rem;
+        text-align: center;
     }
 }
